# cppbp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  library.cpp  main.cpp
.github/workflows/: cmake.yml
base/: CMakeLists.txt
base/include/base/: backprop.h  base.h  exceptions.h  forward.h  linked.h  magic.h  serializable.h  summary.h  type_id.h
dataloader/: CMakeLists.txt  dataloader.cpp  iris_dataset.cpp  minst_dataloader.cpp  mnist_dataset.cpp
dataloader/include/dataloader/: dataloader.h  dataset.h  iris_dataset.h  mnist_dataset.h
docs/report/: homework.tex  reference.bib
examples/: CMakeLists.txt
examples/iris/: CMakeLists.txt  main.cpp
examples/mnist/: CMakeLists.txt  main.cpp
layer/: CMakeLists.txt  activation_function.cpp  batch_norm.cpp  dropout.cpp  fully_connect.cpp  fully_connected.cpp  he_initializer.cpp  input.cpp  layer.cpp  layer_norm.cpp  neuron.cpp  random_initializer.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp  xavier_intializer.cpp
layer/include/layer/: Softmax.h  activation_function.h  batch_norm.h  dropout.h  fully_connected.h  he_initializer.h  initializer.h  input.h  layer.h  layer_norm.h  neuron.h  random_initializer.h  relu.h  sigmoid.h  softmax.h  tanh.h  xavier_initializer.h
libs/: CMakeLists.txt
model/: CMakeLists.txt  accuracy_callback.cpp  basic_information.cpp  loss_output_callback.cpp  model.cpp
model/include/model/: accuracy_callback.h  callback.h  loss_output_callback.h  model.h  persist.h
optimizer/: CMakeLists.txt  cross_entropy.cpp  crossentropy.cpp  fixed_step_optimizer.cpp  mse.cpp  sgd_optimizer.cpp
optimizer/include/optimizer/: cross_entropy.h  crossentropy.h  fixed_step_optimizer.h  loss.h  mse.h  optimizer.h  sgd_optimizer.h
test/: CMakeLists.txt  relu_test.cpp  sigmoid_test.cpp
utils/: CMakeLists.txt  random.cpp
utils/include/utils/: counter.h  random.h  utils.h
